--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,8 +16,9 @@
         android:label="@string/app_name" >
         <activity
             android:name="MainActivity"
-            android:label="@string/app_name" android:theme="@android:style/Theme.Holo.Light.NoActionBar">
-            <intent-filter>
+            android:label="@string/app_name"><!--
+             android:theme="@android:style/Theme.Holo.Light.NoActionBar"
+            --><intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
